feat: added delete buttons

--- a/src/ex1/index.html
+++ b/src/ex1/index.html
@@ -1,28 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Exercise 1</title>
+    <title>Shuki</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="background">
       <div class="content">
-        <h1>Todo list</h1>
-        <main>
-          <section class="top">
-            <input type="text" class="todo" placeholder="Add your new todo" />
-            <button class="addButton" onclick="addTodoTask()">+</button>
-          </section>
-          <section class="middle"></section>
-          <section class="bottom">
-            <div class="pending">
-              You have <span class="tasks">0</span> pending tasks
-            </div>
-            <button class="clearButton" onclick="clearAllTasks()">
-              Clear All
-            </button>
-          </section>
-        </main>
+        <h1>Shuki</h1>
+        <section class="top">
+          <input
+            type="text"
+            class="todoInput"
+            placeholder="Add your new todo"
+          />
+          <button class="addButton" onclick="addTodo()">+</button>
+        </section>
+        <section class="todos"></section>
+        <section class="bottom">
+          <div class="pending">
+            You have <span class="counter">0</span> pending tasks
+          </div>
+          <button class="clearAllButton" onclick="clearAllTodos()">
+            Clear All
+          </button>
+        </section>
       </div>
     </div>
   </body>
