--- a/src/ex2/index.html
+++ b/src/ex2/index.html
@@ -1,24 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Listy</title>
+    <title>Shuki</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="app-container">
       <div class="list-container">
-        <h1 class="app-name">Todo App</h1>
+        <h1 class="app-name">Shuki</h1>
         <div class="list-controls">
           <input
             type="text"
             id="list-item-input"
             placeholder="Add your new todo"
           />
-          <button type="button" id="list-item-submit">+</button>
+          <button type="button" id="list-item-submit" onclick="addTodo()">
+            +
+          </button>
         </div>
         <ul id="list"></ul>
+        <div class="list-clear">
+          You have <span id="counter">0</span> pending tasks
+          <button type="button" id="list-item-clear" onclick="clearAllTodos()">
+            Clear All
+          </button>
+        </div>
       </div>
     </div>
   </body>
-  <script src="main.js"></script>
+  <!-- <script src="main.js"></script> -->
+  <script src="script.js"></script>
 </html>
