--- a/src/ex2/index.html
+++ b/src/ex2/index.html
@@ -29,5 +29,6 @@
     </div>
   </body>
   <!-- <script src="main.js"></script> -->
+  <script src="ItemManager.js"></script>
   <script src="script.js"></script>
 </html>
