feat: separeted to classed

--- a/src/ex2/index.html
+++ b/src/ex2/index.html
@@ -14,21 +14,17 @@
             id="list-item-input"
             placeholder="Add your new todo"
           />
-          <button type="button" id="list-item-submit" onclick="addTodo()">
-            +
-          </button>
+          <button type="button" id="list-item-submit">+</button>
         </div>
         <ul id="list"></ul>
         <div class="list-clear">
           You have <span id="counter">0</span> pending tasks
-          <button type="button" id="list-item-clear" onclick="clearAllTodos()">
-            Clear All
-          </button>
+          <button type="button" id="list-item-clear">Clear All</button>
         </div>
       </div>
     </div>
   </body>
-  <!-- <script src="main.js"></script> -->
+  <script src="DomManager.js"></script>
   <script src="ItemManager.js"></script>
-  <script src="script.js"></script>
+  <script src="main.js"></script>
 </html>
