--- a/src/ex2/index.html
+++ b/src/ex2/index.html
@@ -26,5 +26,6 @@
   </body>
   <script src="DomManager.js"></script>
   <script src="ItemManager.js"></script>
+  <script src="PokemonClient.js"></script>
   <script src="main.js"></script>
 </html>
